get input value

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header>
         <div class="title">
             <h1>To do list</h1>
-            <input id="inputItem" type="text" placeholder="Type here">
+            <div class="input_container">
+                <input id="inputItem" type="text" placeholder="Type here">
+                <button onclick="getInputValue()">Add</button>
+            </div>
         </div>
     </header>
     <main>
