--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>To do list</h1>
             <div class="input_container">
                 <input id="inputItem" type="text" placeholder="Type here">
-                <button onclick="getInputValue()">Add</button>
+                <button onclick="addItemToList()">Add</button>
             </div>
         </div>
     </header>
