element can be marked as done

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
             <h1>To do list</h1>
             <div class="input_container">
                 <input id="inputItem" type="text" placeholder="Type here">
-                <button onclick="getInputValue()">Add</button>
+                <button onclick="addItemToList()">Add</button>
             </div>
         </div>
     </header>
     <main>
-        <ul id="ItemsList">
-            
+        <ul id="ItemsList">          
         </ul>
     </main>
     
